// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination plugin should add pagination 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
  <ul class="pagination">
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to 1. page"
              title="Go to 1. page"
              disabled
      >
        <span>
          1
        </span>
      </button>
    </li>
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to 2. page"
              title="Go to 2. page"
      >
        <span>
          2
        </span>
      </button>
    </li>
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to 3. page"
              title="Go to 3. page"
      >
        <span>
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination plugin should add pagination with custom options 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
  <ul class="custom-pagination-class">
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to first item"
              title="Go to first item"
              disabled
      >
        <span>
          first
        </span>
      </button>
    </li>
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to second item"
              title="Go to second item"
      >
        <span>
          second
        </span>
      </button>
    </li>
    <li>
      <button type="button"
              aria-controls="caroucssel-1"
              aria-label="Go to third item"
              title="Go to third item"
      >
        <span>
          third
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination plugin should add pagination with custom template 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
  <div class="custom-pagination-class"
       aria-controls="caroucssel-1"
  >
    <div class="item"
         aria-label="Go to first page"
    >
      first
    </div>
    <div class="item"
         aria-label="Go to second page"
    >
      second
    </div>
    <div class="item"
         aria-label="Go to third page"
    >
      third
    </div>
  </div>
</div>
`;

exports[`Pagination plugin should handle pagination with custom template that returns empty string 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination plugin should handle pagination with custom template that returns null 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination plugin should handle pagination with custom template that returns undefined 1`] = `
<div class="container">
  <div class="caroucssel-mask"
       style="overflow: hidden; height: 100%;"
  >
    <div class="caroucssel"
         id="caroucssel-1"
         style="height: calc(100% + 0px); margin-bottom: 0px;"
    >
      <div class="item item-0">
        Item 0
      </div>
      <div class="item item-1">
        Item 1
      </div>
      <div class="item item-2">
        Item 2
      </div>
    </div>
  </div>
</div>
`;
